--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "serv": "node server.js",
     "build": "next build  --turbopack",
     "start": "next start",
     "lint": "next lint"
@@ -33,6 +34,7 @@
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "ws": "^8.18.3",
     "zod": "^4.0.14"
   },
   "devDependencies": {
